--- a/index.html
+++ b/index.html
@@ -590,6 +590,19 @@
             color: #f7931e;
         }
 
+        /* Contact link styling */
+        .contact-link {
+            color: #ff6b35;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+
+        .contact-link:hover {
+            color: #f7931e;
+            text-decoration: underline;
+        }
+
         /* Animations */
         @keyframes fadeInUp {
             from {
@@ -1087,15 +1100,14 @@
             <div class="footer-section">
                 <h3>Contact Us</h3>
                 <p><strong>Tejaswi Foundation</strong></p>
-                <p>📧 Email: info@suryoday.org</p>
-                <p>📞 Phone: +91 98765 43210</p>
-                <p>📱 WhatsApp: +91 98765 43210</p>
+                <p>📞 Phone: <a href="tel:09921912727" class="contact-link">099219 12727</a></p>
+                <p>🕒 Open: 24/7 for residents and visitors</p>
             </div>
             <div class="footer-section">
                 <h3>Visit Us</h3>
                 <p>🏠 Suryoday Vruddhashram</p>
-                <p>📍 Near City Center</p>
-                <p>🏙 Your City, State - 123456</p>
+                <p>📍 <a href="https://maps.app.goo.gl/M7rG6URQZTyff" target="_blank" class="contact-link">View on Google Maps</a></p>
+                <p>🏙 Pune, Maharashtra</p>
                 <p>🕒 Open: 24/7 for residents</p>
             </div>
             <div class="footer-section">
@@ -1106,11 +1118,10 @@
                 <p><a href="#contact">Contact</a></p>
             </div>
             <div class="footer-section">
-                <h3>Follow Us</h3>
-                <p>📘 Facebook: @SuryodayVruddhashram</p>
-                <p>📷 Instagram: @suryoday_foundation</p>
-                <p>📺 YouTube: Suryoday Foundation</p>
-                <p>🐦 Twitter: @SuryodayOrg</p>
+                <h3>Our Mission</h3>
+                <p>Providing loving care and dignified living for our elderly community</p>
+                <p>सेवा परमो धर्मः</p>
+                <p>(Service is the supreme duty)</p>
             </div>
         </div>
         <div style="border-top: 1px solid rgba(255,255,255,0.2); padding-top: 1rem; margin-top: 1rem;">
