--- a/index.html
+++ b/index.html
@@ -770,7 +770,8 @@
         <nav class="container">
             <div class="logo-section">
                 <div class="logo-circle">
-                    <img src="images/logo2.jpg" alt="Suryoday Logo" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 200 200%22><rect fill=%22%23ffffff%22 width=%22200%22 height=%22200%22/><text x=%2250%25%22 y=%2250%25%22 font-size=%2240%22 text-anchor=%22middle%22 dy=%2214%22>🙏</text></svg>'">
+                    <!-- FIXED: Added ./ before images path -->
+                    <img src="./images/logo2.jpg" alt="Suryoday Logo" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 200 200%22><rect fill=%22%23ffffff%22 width=%22200%22 height=%22200%22/><text x=%2250%25%22 y=%2250%25%22 font-size=%2240%22 text-anchor=%22middle%22 dy=%2214%22>🙏</text></svg>'">
                 </div>
                 <div class="logo-text">
                     <h1>सुर्योदय वृद्धाश्रम</h1>
@@ -811,8 +812,9 @@
             <p style="text-align: center; font-size: 1.05rem; color: #666; margin-bottom: 1.6rem;">Capturing moments of joy, care, and community</p>
             
             <div class="photo-grid">
+                <!-- FIXED: Added ./ before all image paths -->
                 <div class="photo-item">
-                    <img src="images/10.jpg" alt="Comfortable Living" onerror="this.onerror=null;this.src='images/1.jpg'">
+                    <img src="./images/10.jpg" alt="Comfortable Living" onerror="this.onerror=null;this.src='./images/1.jpg'">
                     <div class="photo-caption">
                         <h3>🏠 Comfortable Living Spaces</h3>
                         <p>Clean, safe, and welcoming rooms for our residents</p>
@@ -820,7 +822,7 @@
                 </div>
 
                 <div class="photo-item">
-                    <img src="images/14.jpg" alt="Nutritious Meals" onerror="this.onerror=null;this.src='images/2.jpg'">
+                    <img src="./images/14.jpg" alt="Nutritious Meals" onerror="this.onerror=null;this.src='./images/2.jpg'">
                     <div class="photo-caption">
                         <h3>🍽 Nutritious Meals</h3>
                         <p>Home-cooked, healthy meals served with love</p>
@@ -828,7 +830,7 @@
                 </div>
 
                 <div class="photo-item">
-                    <img src="images/12.jpg" alt="Community Events" onerror="this.onerror=null;this.src='images/3.jpg'">
+                    <img src="./images/12.jpg" alt="Community Events" onerror="this.onerror=null;this.src='./images/3.jpg'">
                     <div class="photo-caption">
                         <h3>🎉 Community Events & Celebrations</h3>
                         <p>Joyful moments with staff and volunteers</p>
@@ -836,7 +838,7 @@
                 </div>
 
                 <div class="photo-item">
-                    <img src="images/13.jpg" alt="Personal Care" onerror="this.onerror=null;this.src='images/4.jpg'">
+                    <img src="./images/13.jpg" alt="Personal Care" onerror="this.onerror=null;this.src='./images/4.jpg'">
                     <div class="photo-caption">
                         <h3>❤ Personal Care & Attention</h3>
                         <p>Compassionate care for every resident</p>
@@ -844,7 +846,7 @@
                 </div>
 
                 <div class="photo-item">
-                    <img src="images/11.jpg" alt="Spiritual Activities" onerror="this.onerror=null;this.src='images/5.jpg'">
+                    <img src="./images/11.jpg" alt="Spiritual Activities" onerror="this.onerror=null;this.src='./images/5.jpg'">
                     <div class="photo-caption">
                         <h3>🙏 Spiritual & Cultural Activities</h3>
                         <p>Daily prayers, bhajans, and spiritual guidance</p>
@@ -852,7 +854,7 @@
                 </div>
 
                 <div class="photo-item">
-                    <img src="images/15.jpg" alt="Yoga Sessions" onerror="this.onerror=null;this.src='images/6.jpg'">
+                    <img src="./images/15.jpg" alt="Yoga Sessions" onerror="this.onerror=null;this.src='./images/6.jpg'">
                     <div class="photo-caption">
                         <h3>🧘 Yoga & Exercise Sessions</h3>
                         <p>Keeping our residents active and healthy</p>
@@ -860,7 +862,7 @@
                 </div>
 
                 <div class="photo-item">
-                    <img src="images/16.jpg" alt="Medical Care" onerror="this.onerror=null;this.src='images/7.jpg'">
+                    <img src="./images/16.jpg" alt="Medical Care" onerror="this.onerror=null;this.src='./images/7.jpg'">
                     <div class="photo-caption">
                         <h3>🏥 Healthcare Support</h3>
                         <p>Regular health check-ups and medical assistance</p>
@@ -868,7 +870,7 @@
                 </div>
 
                 <div class="photo-item">
-                    <img src="images/17.jpg" alt="Festival Celebrations" onerror="this.onerror=null;this.src='images/8.jpg'">
+                    <img src="./images/17.jpg" alt="Festival Celebrations" onerror="this.onerror=null;this.src='./images/8.jpg'">
                     <div class="photo-caption">
                         <h3>🎊 Festival Celebrations</h3>
                         <p>Celebrating all festivals with joy and tradition</p>
@@ -888,7 +890,8 @@
             </div>
             <div class="logo-display">
                 <div class="main-logo">
-                    <img src="images/logo2.jpg" alt="Main Logo" onerror="this.onerror=null;this.src='images/1.jpg'">
+                    <!-- FIXED: Added ./ before images path -->
+                    <img src="./images/logo2.jpg" alt="Main Logo" onerror="this.onerror=null;this.src='./images/1.jpg'">
                 </div>
                 <p style="color:#555;">Tejaswi Foundation — caring hands for our elders.</p>
             </div>
@@ -900,8 +903,9 @@
         <div class="container">
             <h2>Our Work</h2>
             <div class="gallery-grid">
+                <!-- FIXED: Added ./ before all image paths in background images -->
                 <div class="gallery-item">
-                    <div class="gallery-item-image" style="background-image: url('images/1.jpg');"></div>
+                    <div class="gallery-item-image" style="background-image: url('./images/1.jpg');"></div>
                     <div class="gallery-item-content">
                         <h3>Daily Care</h3>
                         <p>Personalised assistance and daily health monitoring for residents.</p>
@@ -909,7 +913,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-item-image" style="background-image: url('images/2.jpg');"></div>
+                    <div class="gallery-item-image" style="background-image: url('./images/2.jpg');"></div>
                     <div class="gallery-item-content">
                         <h3>Meals & Nutrition</h3>
                         <p>Nutritious home-cooked meals prepared with care.</p>
@@ -917,7 +921,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-item-image" style="background-image: url('images/3.jpg');"></div>
+                    <div class="gallery-item-image" style="background-image: url('./images/3.jpg');"></div>
                     <div class="gallery-item-content">
                         <h3>Medical Camps</h3>
                         <p>Regular medical check-ups and specialist visits.</p>
@@ -925,7 +929,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-item-image" style="background-image: url('images/4.jpg');"></div>
+                    <div class="gallery-item-image" style="background-image: url('./images/4.jpg');"></div>
                     <div class="gallery-item-content">
                         <h3>Cultural Events</h3>
                         <p>Festivals, bhajans and community celebrations.</p>
@@ -933,7 +937,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-item-image" style="background-image: url('images/5.jpg');"></div>
+                    <div class="gallery-item-image" style="background-image: url('./images/5.jpg');"></div>
                     <div class="gallery-item-content">
                         <h3>Yoga & Exercise</h3>
                         <p>Gentle yoga and physical activities tailored for elders.</p>
@@ -941,7 +945,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-item-image" style="background-image: url('images/6.jpg');"></div>
+                    <div class="gallery-item-image" style="background-image: url('./images/6.jpg');"></div>
                     <div class="gallery-item-content">
                         <h3>Volunteer Programs</h3>
                         <p>Opportunities for community members to help and engage.</p>
@@ -949,7 +953,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-item-image" style="background-image: url('images/7.jpg');"></div>
+                    <div class="gallery-item-image" style="background-image: url('./images/7.jpg');"></div>
                     <div class="gallery-item-content">
                         <h3>Support Services</h3>
                         <p>Transportation and outreach services.</p>
@@ -957,7 +961,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-item-image" style="background-image: url('images/8.jpg');"></div>
+                    <div class="gallery-item-image" style="background-image: url('./images/8.jpg');"></div>
                     <div class="gallery-item-content">
                         <h3>Celebrations</h3>
                         <p>Special event coverage.</p>
@@ -965,7 +969,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-item-image" style="background-image: url('images/elderly%20care.jpg');"></div>
+                    <div class="gallery-item-image" style="background-image: url('./images/elderly%20care.jpg');"></div>
                     <div class="gallery-item-content">
                         <h3>Visits & Family Time</h3>
                         <p>Family visits and community engagement.</p>
@@ -1057,7 +1061,8 @@
                             </div>
                             <div class="payment-method">
                                 <h4>Scan QR</h4>
-                                <img src="images/donation-qr.png" alt="Donate QR" style="width:120px; height:120px; border-radius:8px; margin-top:8px;">
+                                <!-- FIXED: Added ./ before images path -->
+                                <img src="./images/donation-qr.png" alt="Donate QR" style="width:120px; height:120px; border-radius:8px; margin-top:8px;">
                             </div>
                         </div>
                     </div>
@@ -1088,7 +1093,8 @@
         <div class="qr-popup-content">
             <span class="qr-close-btn" onclick="closeQRPopup()">&times;</span>
             <h2>Scan to Donate</h2>
-            <img src="images/donation-qr.png" alt="Donation QR Code" onerror="this.onerror=null;this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 200 200%22><rect fill=%22%23ffffff%22 width=%22200%22 height=%22200%22/><text x=%2250%25%22 y=%2250%25%22 font-size=%2230%22 text-anchor=%22middle%22 dy=%2210%22 fill=%22black%22>QR</text></svg>'">
+            <!-- FIXED: Added ./ before images path -->
+            <img src="./images/donation-qr.png" alt="Donation QR Code" onerror="this.onerror=null;this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 200 200%22><rect fill=%22%23ffffff%22 width=%22200%22 height=%22200%22/><text x=%2250%25%22 y=%2250%25%22 font-size=%2230%22 text-anchor=%22middle%22 dy=%2210%22 fill=%22black%22>QR</text></svg>'">
             <p>Use any UPI app to scan and complete your donation ❤️</p>
             <p style="font-size: 0.85rem; margin-top: 6px;">UPI ID: <b>chhaya5777bhagat@oksbi</b></p>
         </div>
@@ -1218,9 +1224,6 @@
             if (name && email && amount) {
                 // Show QR popup instead of redirecting to UPI
                 openQRPopup();
-                
-                // Optional: You can still show the alert if you want
-                // alert(`Thank you ${name} for choosing to donate ₹${amount}. Please scan the QR code to complete your donation.`);
             } else {
                 alert('Please fill in all fields before proceeding.');
             }
